--- a/source/catalog.html
+++ b/source/catalog.html
@@ -37,66 +37,71 @@
     <main class="main-container">
       <div class="hero-block-inner">
         <h1 class="visually-hidden">Седона</h1>
+        <div class="hero-block-inner__img"></div>
       </div>
       <section class="gallery-photo">
-        <div class="gallery-photo__wrapper">
+        <div class="gallery-photo__intro">
           <h2 class="gallery-photo__title">Фото и видео</h2>
           <p class="gallery-photo__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
+        </div>
           <ul class="gallery-photo__list">
             <li class="gallery-photo__item">
-              <h3 class="gallery-photo__name-card"></h3>
+              <img class="gallery-photo__img" src="img/photo-1-mobile.jpg.png" alt="дорога через каньон на закате" width="280" height="280">
+              <h3 class="gallery-photo__name-card">Неродные просторы</h3>
               <dl class="gallery-photo__author">
-                <dt>Автор фото:</dt>
-                <dd>Борис</dd>
+                <dt class="gallery-photo__author-label">Автор фото:</dt>
+                <dd class="gallery-photo__author-name">Борис</dd>
               </dl>
               <div class="gallery-photo__like">
-                <svg width="23" height="21" xmlns="http://www.w3.org/2000/svg">
+                <svg class="gallery-photo__like-icon" width="23" height="21" xmlns="http://www.w3.org/2000/svg">
                   <path opacity=".3" d="m13 3.8-.7 3-.6 2.6h9.1v2.2l-3 7.3H8.4V8.4L13 3.8ZM2 10.5v8.4-8.4ZM13.9 0 6.9 7c-.4.2-.6.8-.6 1.4v10.5c0 1.2 1 2.1 2 2.1h9.5a2 2 0 0 0 1.9-1.3l3-7.4c.2-.2.2-.5.2-.8v-2h.1c0-1.2-1-2.2-2-2.2h-6.7l1-4.8v-.3c0-.4-.1-.8-.4-1.2l-1.1-1ZM4.2 8.4H0V21h4.2V8.4Z" fill="#000"/>
                 </svg>
                 <span class="gallery-photo__number">1350</span>
               </div>
             </li>
             <li class="gallery-photo__item">
-              <h3 class="gallery-photo__name-card"></h3>
+              <img class="gallery-photo__img" src="img/photo-2-mobile.jpg.png" alt="растения на фоне каньона" width="280" height="280">
+              <h3 class="gallery-photo__name-card">Местная растительность</h3>
               <dl class="gallery-photo__author">
-                <dt>Автор фото:</dt>
-                <dd>Сергей</dd>
+                <dt class="gallery-photo__author-label">Автор фото:</dt>
+                <dd class="gallery-photo__author-name">Сергей</dd>
               </dl>
               <div class="gallery-photo__like">
-                <svg width="23" height="21" xmlns="http://www.w3.org/2000/svg">
+                <svg class="gallery-photo__like-icon" width="23" height="21" xmlns="http://www.w3.org/2000/svg">
                   <path opacity=".3" d="m13 3.8-.7 3-.6 2.6h9.1v2.2l-3 7.3H8.4V8.4L13 3.8ZM2 10.5v8.4-8.4ZM13.9 0 6.9 7c-.4.2-.6.8-.6 1.4v10.5c0 1.2 1 2.1 2 2.1h9.5a2 2 0 0 0 1.9-1.3l3-7.4c.2-.2.2-.5.2-.8v-2h.1c0-1.2-1-2.2-2-2.2h-6.7l1-4.8v-.3c0-.4-.1-.8-.4-1.2l-1.1-1ZM4.2 8.4H0V21h4.2V8.4Z" fill="#000"/>
                 </svg>
                 <span class="gallery-photo__number">143</span>
               </div>
             </li>
             <li class="gallery-photo__item">
-              <h3 class="gallery-photo__name-card"></h3>
+              <img class="gallery-photo__img" src="img/photo-3-mobile.jpg.png" alt="серпантин в лесу в горах" width="280" height="280">
+              <h3 class="gallery-photo__name-card">Дорога на север</h3>
               <dl class="gallery-photo__author">
-                <dt>Автор фото:</dt>
-                <dd>Пётр</dd>
+                <dt class="gallery-photo__author-label">Автор фото:</dt>
+                <dd class="gallery-photo__author-name">Пётр</dd>
               </dl>
               <div class="gallery-photo__like">
-                <svg width="23" height="21" xmlns="http://www.w3.org/2000/svg">
+                <svg class="gallery-photo__like-icon" width="23" height="21" xmlns="http://www.w3.org/2000/svg">
                   <path opacity=".3" d="m13 3.8-.7 3-.6 2.6h9.1v2.2l-3 7.3H8.4V8.4L13 3.8ZM2 10.5v8.4-8.4ZM13.9 0 6.9 7c-.4.2-.6.8-.6 1.4v10.5c0 1.2 1 2.1 2 2.1h9.5a2 2 0 0 0 1.9-1.3l3-7.4c.2-.2.2-.5.2-.8v-2h.1c0-1.2-1-2.2-2-2.2h-6.7l1-4.8v-.3c0-.4-.1-.8-.4-1.2l-1.1-1ZM4.2 8.4H0V21h4.2V8.4Z" fill="#000"/>
                 </svg>
                 <span class="gallery-photo__number">96</span>
               </div>
             </li>
             <li class="gallery-photo__item">
-              <h3 class="gallery-photo__name-card"></h3>
+              <img class="gallery-photo__img" src="img/photo-4-desktop 1.png" alt="вид на каньон Мост дьявола" width="280" height="280">
+              <h3 class="gallery-photo__name-card">Мост дьявола</h3>
               <dl class="gallery-photo__author">
-                <dt>Автор фото:</dt>
-                <dd>Антон</dd>
+                <dt class="gallery-photo__author-label">Автор фото:</dt>
+                <dd class="gallery-photo__author-name">Антон</dd>
               </dl>
               <div class="gallery-photo__like">
-                <svg width="23" height="21" xmlns="http://www.w3.org/2000/svg">
+                <svg class="gallery-photo__like-icon" width="23" height="21" xmlns="http://www.w3.org/2000/svg">
                   <path opacity=".3" d="m13 3.8-.7 3-.6 2.6h9.1v2.2l-3 7.3H8.4V8.4L13 3.8ZM2 10.5v8.4-8.4ZM13.9 0 6.9 7c-.4.2-.6.8-.6 1.4v10.5c0 1.2 1 2.1 2 2.1h9.5a2 2 0 0 0 1.9-1.3l3-7.4c.2-.2.2-.5.2-.8v-2h.1c0-1.2-1-2.2-2-2.2h-6.7l1-4.8v-.3c0-.4-.1-.8-.4-1.2l-1.1-1ZM4.2 8.4H0V21h4.2V8.4Z" fill="#000"/>
                 </svg>
                 <span class="gallery-photo__number">254</span>
               </div>
             </li>
           </ul>
-        </div>
       </section>
       <section class="video-block">
         <div class="video-block__wrapper">
@@ -114,30 +119,30 @@
       <div class="main-footer__wrapper">
         <section class="main-footer__hashtag hashtag">
           <h2 class="visually-hidden">visit sedona</h2>
-          <a class="hashtag__link" href="#">#visitsedona</a>
+          <a class="main-footer__hashtag-link" href="#">#visitsedona</a>
         </section>
         <section class="main-footer__social-network social-network">
           <h2 class="visually-hidden">Социальные сети</h2>
           <ul class="social-network__list">
             <li class="social-network__item social-network__item--vk">
-              <a class="social-network">
-                <svg width="24" height="14" xmlns="http://www.w3.org/2000/svg">
+              <a class="social-network__link">
+                <svg class="social-network__icon" width="24" height="14" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M23.4 1c.2-.6 0-1-.7-1H20c-.6 0-1 .3-1.1.7 0 0-1.3 3.2-3.2 5.3-.7.6-1 .8-1.3.8-.1 0-.4-.2-.4-.7V.9c0-.6-.2-.9-.7-.9H9.2c-.5 0-.7.3-.7.6 0 .6 1 .8 1 2.5V7c0 .8-.1 1-.5 1-.9 0-3-3.2-4.3-6.9-.3-.7-.5-1-1.2-1H1C.1 0 0 .3 0 .7c0 .7.9 4.1 4.1 8.6 2.2 3 5.3 4.7 8 4.7 1.7 0 2-.4 2-1v-2.3c0-.8 0-.9.6-.9.4 0 1 .2 2.6 1.7 1.8 1.7 2.1 2.5 3.1 2.5H23c.8 0 1.2-.4 1-1.1-.3-.7-1.1-1.8-2.3-3L20 8c-.4-.5-.3-.7 0-1.1 0 0 3.2-4.4 3.5-6Z"/>
                 </svg>
                 <span class="visually-hidden">Вконтакте</span>
               </a>
             </li>
             <li class="social-network__item social-network__item--telegram">
-              <a class="social-network">
-                <svg width="22" height="18" xmlns="http://www.w3.org/2000/svg">
+              <a class="social-network__link">
+                <svg class="social-network__icon" width="22" height="18" xmlns="http://www.w3.org/2000/svg">
                   <path d="m21.4 1.6-3.1 15c-.3 1-.9 1.3-1.8.8l-4.8-3.6-2.3 2.3c-.3.2-.5.4-1 .4l.3-4.9 9-8c.4-.4-.1-.6-.6-.3l-11 7-4.8-1.5c-1-.3-1-1 .2-1.5L20 0c.9-.3 1.6.2 1.3 1.5Z"/>
                 </svg>
                 <span class="visually-hidden">Телеграм</span>
               </a>
             </li>
             <li class="social-network__item social-network__item--youtube">
-              <a class="social-network">
-                <svg width="20" height="14" xmlns="http://www.w3.org/2000/svg">
+              <a class="social-network__link">
+                <svg class="social-network__icon" width="20" height="14" xmlns="http://www.w3.org/2000/svg">
                   <path d="M17.2 0H2.8A2.9 2.9 0 0 0 0 2.8v8.3C0 12.7 1.3 14 2.8 14h14.4c1.6 0 2.8-1.3 2.8-2.8V2.8C20 1.3 18.8 0 17.2 0ZM7 10.4V3.6L14 7 7 10.4Z"/>
                 </svg>
                 <span class="visually-hidden">Ютуб</span>
@@ -148,7 +153,7 @@
         <section class="main-footer__copyright copyright">
           <h2 class="visually-hidden">Разработано в HTML Academy</h2>
           <a class="copyright__link" href="#">
-            <span>Разработано</span>
+            <span class="copyright__text">Разработано</span>
             <svg width="27" height="35" xmlns="http://www.w3.org/2000/svg">
               <path d="M13.6 0h-.1L0 1.4v24.7l13.5 8 13.4-8V1.4L13.6 0ZM25 12.1 13.5 5.3v-.1h-.1l-.1-.1v.1L1.9 12.1v-9l11.5-1.2L25 3.1v9ZM13.4 6.8l11.5 6.7-4.5 2.6-7.1-4.2v1.4l5.9 3.5-.9.5-5-3v1.4l3.8 2.3-.8.5-3-1.8v1.4l1.9 1.1-1.8 1.1L2 13.6l11.4-6.8ZM1.9 15.1l11.4 6.8v1l-7.9-4.7v1.4l8 4.8v1.1l-8-4.7v1.4l8 4.8 8.1-4.9v-5.2l3.4-2v10l-11.5 6.9L1.9 25v-9.9Z"/>
             </svg>
