--- a/source/index.html
+++ b/source/index.html
@@ -49,82 +49,74 @@
         <div class="hero-block__img"></div>
       </div>
       <div class="prologue">
-        <h2 class="visually-hidden">Преимущества Седоны</h2>
-        <p class="advantages__title advantages__title--intro">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
-        <p class="advantages__description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+        <div class="prologue__content">
+          <h2 class="visually-hidden">Преимущества Седоны</h2>
+          <p class="title title--intro">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+          <p class="description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+        </div>
         <div class="prologue__decor"></div>
       </div>
       <section class="advantages">
         <ul class="advantages__list">
           <li class="advantages__item advantages__item--with-img">
-            <h3 class="advantages__title">Настоящий городок</h3>
+            <h3 class="title">Настоящий городок</h3>
             <p class="advantages__number">— №1 —</p>
-            <p class="advantages__description">Седона не атракциаон для туристов, там течет своя жизнь</p>
+            <p class="description">Седона не атракциаон для туристов, там течет своя жизнь</p>
           </li>
           <li class="advantages__item advantages__item--img">
             <img class="advantages__image" src="img/photo-city.jpg" alt="Вид на улицу города Седона, здание с флагами, деревья и горы на заднем плане" width="320" height="260">
           </li>
-          <li class="advantages__item">
-            <ul class="advantages__list--icons">
-              <li class="advantages__item advantages__item--icon">
-                <svg class="advantages__icon" width="40" height="40" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M15.9 34.8h8.4V22.6h-8.4v12.2Zm6.8-1.5h-5.3v-9.2h5.3v9.2Z" fill="#81B3D2"/><path d="m38.4 21.6 1.1-1-5.2-5V1.7h-7.2v6.7l-7.1-7L.5 20.7l1.1 1 4-3.9V37h-2v1.5H37V37h-2.7V17.7l4.1 4ZM28.6 3.3h4.2V14l-4.2-4V3.3ZM32.8 37H7.2V16.2L20 3.7l12.8 12.5v20.7Z" fill="#81B3D2"/><path d="M16 15.4a4 4 0 0 0 4 4 4 4 0 0 0 4.2-4 4 4 0 0 0-4.1-3.9 4 4 0 0 0-4 4Zm4-2.5c1.5 0 2.7 1.1 2.7 2.5S21.5 18 20 18a2.6 2.6 0 0 1-2.6-2.6c0-1.4 1.2-2.5 2.6-2.5ZM10.9 22.6H9.3v2H11v-2ZM14 22.6h-1.6v2H14v-2ZM10.9 25.7H9.3v2H11v-2ZM14 25.7h-1.6v2H14v-2ZM27.5 22.6H26v2h1.5v-2ZM30.7 22.6H29v2h1.6v-2ZM27.5 25.7H26v2h1.5v-2ZM30.7 25.7H29v2h1.6v-2Z" fill="#81B3D2"/>
-                </svg>
-                <div class="advantages__item-text">
-                  <h3 class="advantages__title advantages__title--align-left">Жилье</h3>
-                  <p class="advantages__description advantages__description--align-left">Рекомендуем пожить в настоящем мотеле, совсем как в кино!</p>
-                </div>
-              </li>
-              <li class="advantages__item advantages__item--icon">
-                <svg class="advantages__icon" width="40" height="40" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M37.7 25.9H2.3C1 25.9 0 26.9 0 28v1.8c0 1.2 1 2.1 2.3 2.1h.5v.5c0 2.8 2.3 5 5.2 5h24c3 0 5.2-2.2 5.2-5V32h.5c1.3 0 2.3-1 2.3-2.1V28c0-1.1-1-2.1-2.3-2.1Zm-2 6.5c0 2-1.6 3.5-3.6 3.5H7.9c-2 0-3.6-1.5-3.6-3.5V32h31.4v.5Zm2.7-2.6c0 .3-.3.6-.7.6H2.3a.7.7 0 0 1-.7-.6V28c0-.3.3-.6.7-.6h35.5c.4 0 .7.3.7.6v1.8ZM8.5 21.7l2.8 2 3-2 2.8 2 2.9-2 2.8 2 3-2 2.8 2 2.9-2 2.9 2 3.3-2.3-.9-1.2-2.4 1.6-2.9-2-2.9 2-2.9-2-2.9 2-2.8-2-2.9 2-2.9-2-2.9 2-2.8-2-2.9 2-2.4-1.6-1 1.2 3.4 2.4 2.9-2ZM37.2 18.3v-1.5c-.3-8-8-14.2-17.2-14.2-9.3 0-16.9 6.3-17.3 14.2v1.5h34.5ZM20 4.1c8.4 0 15.3 5.6 15.6 12.7H4.3C4.7 9.8 11.6 4 20 4Z" fill="#81B3D2"/><path d="M20 11.2c.6 0 1-.5 1-1 0-.6-.4-1-1-1a1 1 0 0 0-1 1c0 .5.4 1 1 1ZM15.8 8.7c.6 0 1-.5 1-1 0-.6-.4-1-1-1a1 1 0 0 0-1 1c0 .5.4 1 1 1ZM24.2 8.7c.6 0 1-.5 1-1 0-.6-.4-1-1-1a1 1 0 0 0-1 1c0 .5.4 1 1 1Z" fill="#81B3D2"/>
-                </svg>
-                <div class="advantages__item-text">
-                  <h3 class="advantages__title advantages__title--align-left">Еда</h3>
-                  <p class="advantages__description advantages__description--align-left">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-                </div>
-              </li>
-              <li class="advantages__item advantages__item--icon">
-                <svg class="advantages__icon" width="40" height="40" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M34.6 12.2H22.1c6.9-3.4 7.5-5.6 7.2-6.8-.6-2-2.8-3.5-5-2.7-2.8 1-3.5 5.2-4.3 8.2-1-3-1.9-6.9-4-8.9a3.7 3.7 0 0 0-3-1c-2 .2-4.9 2.7-3.7 5.5 1.2 2.7 4.9 4.4 7.3 5.8H5.4c-.8 0-1.4.6-1.4 1.4v5.6c0 .9.7 1.5 1.4 1.5h.2V39h29V20.8c.8 0 1.4-.7 1.4-1.5v-5.6c0-.8-.7-1.5-1.4-1.5ZM25.2 4c1.1-.1 2.5.7 2.7 1.7.2 1.3-1.7 2.6-2.6 3.2-1.2.8-2.5 1.3-3.6 2 .4-1.9 1.2-6.5 3.5-6.9ZM13.8 9c-1.2-.7-3.3-2.2-3.2-3.9 0-1.8 2.8-3.3 4.4-2 1.9 1.8 2.8 5.7 3.5 8.4-1.6-.8-3.1-1.4-4.7-2.5Zm3 28.6H7V20.8h9.7v16.7Zm0-18.3H5.4v-5.5h11.2v5.5Zm5 18.3h-3.6V13.7h3.6v23.8Zm11.2 0h-9.6V20.8H33v16.7H33Zm1.5-18.3H23.4v-5.5h11v5.5Z" fill="#81B3D2"/>
-                </svg>
-                <div class="advantages__item-text">
-                  <h3 class="advantages__title advantages__title--align-left">Сувениры</h3>
-                  <p class="advantages__description advantages__description--align-left">Не только китайского, но и местного производства!</p>
-                </div>
-              </li>
-            </ul>
+          <li class="advantages__item advantages__item--icon">
+            <svg class="advantages__icon" width="40" height="40" xmlns="http://www.w3.org/2000/svg">
+              <path d="M15.9 34.8h8.4V22.6h-8.4v12.2Zm6.8-1.5h-5.3v-9.2h5.3v9.2Z" fill="#81B3D2"/><path d="m38.4 21.6 1.1-1-5.2-5V1.7h-7.2v6.7l-7.1-7L.5 20.7l1.1 1 4-3.9V37h-2v1.5H37V37h-2.7V17.7l4.1 4ZM28.6 3.3h4.2V14l-4.2-4V3.3ZM32.8 37H7.2V16.2L20 3.7l12.8 12.5v20.7Z" fill="#81B3D2"/><path d="M16 15.4a4 4 0 0 0 4 4 4 4 0 0 0 4.2-4 4 4 0 0 0-4.1-3.9 4 4 0 0 0-4 4Zm4-2.5c1.5 0 2.7 1.1 2.7 2.5S21.5 18 20 18a2.6 2.6 0 0 1-2.6-2.6c0-1.4 1.2-2.5 2.6-2.5ZM10.9 22.6H9.3v2H11v-2ZM14 22.6h-1.6v2H14v-2ZM10.9 25.7H9.3v2H11v-2ZM14 25.7h-1.6v2H14v-2ZM27.5 22.6H26v2h1.5v-2ZM30.7 22.6H29v2h1.6v-2ZM27.5 25.7H26v2h1.5v-2ZM30.7 25.7H29v2h1.6v-2Z" fill="#81B3D2"/>
+            </svg>
+            <div class="advantages__item-text">
+              <h3 class="title title--align-left">Жилье</h3>
+              <p class="description description--align-left">Рекомендуем пожить в настоящем мотеле, совсем как в кино!</p>
+            </div>
+          </li>
+          <li class="advantages__item advantages__item--icon">
+            <svg class="advantages__icon" width="40" height="40" xmlns="http://www.w3.org/2000/svg">
+              <path d="M37.7 25.9H2.3C1 25.9 0 26.9 0 28v1.8c0 1.2 1 2.1 2.3 2.1h.5v.5c0 2.8 2.3 5 5.2 5h24c3 0 5.2-2.2 5.2-5V32h.5c1.3 0 2.3-1 2.3-2.1V28c0-1.1-1-2.1-2.3-2.1Zm-2 6.5c0 2-1.6 3.5-3.6 3.5H7.9c-2 0-3.6-1.5-3.6-3.5V32h31.4v.5Zm2.7-2.6c0 .3-.3.6-.7.6H2.3a.7.7 0 0 1-.7-.6V28c0-.3.3-.6.7-.6h35.5c.4 0 .7.3.7.6v1.8ZM8.5 21.7l2.8 2 3-2 2.8 2 2.9-2 2.8 2 3-2 2.8 2 2.9-2 2.9 2 3.3-2.3-.9-1.2-2.4 1.6-2.9-2-2.9 2-2.9-2-2.9 2-2.8-2-2.9 2-2.9-2-2.9 2-2.8-2-2.9 2-2.4-1.6-1 1.2 3.4 2.4 2.9-2ZM37.2 18.3v-1.5c-.3-8-8-14.2-17.2-14.2-9.3 0-16.9 6.3-17.3 14.2v1.5h34.5ZM20 4.1c8.4 0 15.3 5.6 15.6 12.7H4.3C4.7 9.8 11.6 4 20 4Z" fill="#81B3D2"/><path d="M20 11.2c.6 0 1-.5 1-1 0-.6-.4-1-1-1a1 1 0 0 0-1 1c0 .5.4 1 1 1ZM15.8 8.7c.6 0 1-.5 1-1 0-.6-.4-1-1-1a1 1 0 0 0-1 1c0 .5.4 1 1 1ZM24.2 8.7c.6 0 1-.5 1-1 0-.6-.4-1-1-1a1 1 0 0 0-1 1c0 .5.4 1 1 1Z" fill="#81B3D2"/>
+            </svg>
+            <div class="advantages__item-text">
+              <h3 class="title title--align-left">Еда</h3>
+              <p class="description description--align-left">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+            </div>
+          </li>
+          <li class="advantages__item advantages__item--icon">
+            <svg class="advantages__icon" width="40" height="40" xmlns="http://www.w3.org/2000/svg">
+              <path d="M34.6 12.2H22.1c6.9-3.4 7.5-5.6 7.2-6.8-.6-2-2.8-3.5-5-2.7-2.8 1-3.5 5.2-4.3 8.2-1-3-1.9-6.9-4-8.9a3.7 3.7 0 0 0-3-1c-2 .2-4.9 2.7-3.7 5.5 1.2 2.7 4.9 4.4 7.3 5.8H5.4c-.8 0-1.4.6-1.4 1.4v5.6c0 .9.7 1.5 1.4 1.5h.2V39h29V20.8c.8 0 1.4-.7 1.4-1.5v-5.6c0-.8-.7-1.5-1.4-1.5ZM25.2 4c1.1-.1 2.5.7 2.7 1.7.2 1.3-1.7 2.6-2.6 3.2-1.2.8-2.5 1.3-3.6 2 .4-1.9 1.2-6.5 3.5-6.9ZM13.8 9c-1.2-.7-3.3-2.2-3.2-3.9 0-1.8 2.8-3.3 4.4-2 1.9 1.8 2.8 5.7 3.5 8.4-1.6-.8-3.1-1.4-4.7-2.5Zm3 28.6H7V20.8h9.7v16.7Zm0-18.3H5.4v-5.5h11.2v5.5Zm5 18.3h-3.6V13.7h3.6v23.8Zm11.2 0h-9.6V20.8H33v16.7H33Zm1.5-18.3H23.4v-5.5h11v5.5Z" fill="#81B3D2"/>
+            </svg>
+            <div class="advantages__item-text">
+              <h3 class="title title--align-left">Сувениры</h3>
+              <p class="description description--align-left">Не только китайского, но и местного производства!</p>
+            </div>
           </li>
           <li class="advantages__item advantages__item--with-img">
-            <h3 class="advantages__title">Там есть мост дьявола</h3>
+            <h3 class="title">Там есть мост дьявола</h3>
             <p class="advantages__number">— №2 —</p>
-            <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+            <p class="description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
           </li>
           <li class="advantages__item advantages__item--img">
             <img class="advantages__image" src="img/photo-bridge.jpg" alt="Вид на каньон Мост дьявола, каменный выступ и зеленую долину" width="320" height="260">
           </li>
           <li class="advantages__item">
             <ul class="advantages__list--gray">
-              <li class="advantages__item">
-                <h3 class="advantages__title">Небольшая площадь</h3>
+              <li class="advantages__item advantages__item--gray">
+                <h3 class="title">Небольшая площадь</h3>
                 <p class="advantages__number">— №3 —</p>
-                <p class="advantages__description">Все красивые места находятся<br> очень близко</p>
+                <p class="description">Все красивые места находятся<br> очень близко</p>
               </li>
-              <li class="advantages__item">
-                <div class="advantages__separator"></div>
-              </li>
-              <li class="advantages__item">
-                <h3 class="advantages__title">Красивая дорога</h3>
+              <li class="advantages__item advantages__item--gray">
+                <h3 class="title">Красивая дорога</h3>
                 <p class="advantages__number">— №4 —</p>
-                <p class="advantages__description">Ехать в Седону из Лас-Вегаса<br> совсем не скучно!</p>
+                <p class="description">Ехать в Седону из Лас-Вегаса<br> совсем не скучно!</p>
               </li>
-              <li class="advantages__item">
-                <div class="advantages__separator"></div>
-              </li>
-              <li class="advantages__item">
-                <h3 class="advantages__title">Мало туристов</h3>
+              <li class="advantages__item advantages__item--gray">
+                <h3 class="title">Мало туристов</h3>
                 <p class="advantages__number">— №5 —</p>
-                <p class="advantages__description">Большинство едет в Гранд Каньон<br> и толпится там</p>
+                <p class="description">Большинство едет в Гранд Каньон<br> и толпится там</p>
               </li>
             </ul>
           </li>
@@ -133,8 +125,8 @@
       <section class="call-to-action">
         <div class="call-to-action__wrapper">
           <h2 class="visually-hidden">Поиск гостиниц</h2>
-          <p class="call-to-action__title">Заинтересовались?</p>
-          <p class="call-to-action__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <p class="call-to-action__title title--large">Заинтересовались?</p>
+          <p class="call-to-action__description description--margin">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
           <button class="call-to-action__button button-primary" type="button">Найти гостиницу</button>
         </div>
         <div class="contact-map">
