--- a/source/catalog.html
+++ b/source/catalog.html
@@ -48,6 +48,12 @@
     <main class="main-container">
       <div class="hero-block-inner">
         <h1 class="visually-hidden">Седона</h1>
+        <div class="hero-block-inner__logo">
+          <picture>
+            <source media="(min-width: 768px)" srcset="img/sedona_hero.svg" width="457" height="78">
+            <img src="img/sedona_hero.svg" width="229" height="39">
+          </picture>
+        </div>
         <div class="hero-block-inner__img"></div>
       </div>
       <section class="gallery-photo">
