--- a/source/index.html
+++ b/source/index.html
@@ -72,14 +72,12 @@
             <p class="description">Седона не атракциаон для туристов, там течет своя жизнь</p>
           </li>
           <li class="advantages__item advantages__item--img">
-            <div class="advantages__image">
-              <picture>
-                <source media="(min-width: 1200px)" srcset="img/photo-city-desktop.jpg">
-                <source media="(min-width: 768px)" srcset="img/photo-city-tablet.jpg 1x", srcset="img/photo-city-tablet@2x.jpg 2x">
-                <img  src="img/photo-city-mobile.jpg" width="520" height="260" srcset="img/photo-city-mobile@2x.jpg 2x" alt="Вид на улицу города Седона, здание с флагами, деревья и горы на заднем плане">
-              </picture>
-            </div>
-
+            <picture>
+              <source class="advantages__image" media="(max-width: 767px)" src="img/photo-city-mobile.jpg", srcset="img/photo-city-mobile@2x.jpg 2x">
+              <source class="advantages__image" media="(min-width: 768px)" srcset="img/photo-city-tablet.jpg 1x", srcset="img/photo-city-tablet@2x.jpg 2x">
+              <source class="advantages__image" media="(min-width: 1280px)" srcset="img/photo-city-desktop.jpg 1x", srcset="img/photo-city-desktop@2x.jpg 2x">
+              <img class="advantages__image" src="img/photo-city-mobile.jpg" width="520" height="260" srcset="img/photo-city-mobile@2x.jpg 2x" alt="Вид на улицу города Седона, здание с флагами, деревья и горы на заднем плане">
+            </picture>
           </li>
           <li class="advantages__item advantages__item--icon">
             <svg class="advantages__icon" width="40" height="40" xmlns="http://www.w3.org/2000/svg">
@@ -114,7 +112,12 @@
             <p class="description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
           </li>
           <li class="advantages__item advantages__item--img">
-            <img class="advantages__image" src="img/photo-bridge.jpg" alt="Вид на каньон Мост дьявола, каменный выступ и зеленую долину" width="320" height="260">
+            <picture>
+              <source class="advantages__image" media="(max-width: 767px)" src="img/photo-bridge-mobile.jpg", srcset="img/photo-bridge-mobile@2x.jpg 2x">
+              <source class="advantages__image" media="(min-width: 768px)" srcset="img/photo-bridge-tablet.jpg 1x", srcset="img/photo-bridge-tablet@2x.jpg 2x">
+              <source class="advantages__image" media="(min-width: 1280px)" srcset="img/photo-bridge-desktop.jpg 1x", srcset="img/photo-bridge-desktop@2x.jpg 2x">
+              <img class="advantages__image" src="img/photo-bridge-mobile.jpg" width="520" height="260" srcset="img/photo-bridge-mobile@2x.jpg 2x" alt="Вид на каньон Мост дьявола, каменный выступ и зеленую долину">
+            </picture>
           </li>
           <li class="advantages__item">
             <ul class="advantages__list--gray">
