--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" type="image/png" href="img/favicon-32x32.png">
   </head>
   <body class="page__body">
     <svg style="display: none">
